# Resemble-Enhance-Native

./: .gitattributes  README.md  ResembleEnhance.spec  SKILL_ResembleEnhance_CPP.md  crash_log.txt  debug_log.txt  imgui.ini  requirements.txt  run.py  test_wn.py
cpp_src/: CMakeLists.txt  exclude_list.txt  resources.rc
cpp_src/include/: AIEnhancer.hpp  AudioProcessor.hpp  DSPModule.hpp  GUIManager.hpp  InferenceEngine.hpp  ModelDownloader.hpp  Strings.hpp
cpp_src/src/: AIEnhancer.cpp  AudioProcessor.cpp  DSPModule.cpp  GUIManager.cpp  InferenceEngine.cpp  ModelDownloader.cpp  main.cpp
docs/: specs.md  仕様書.md
scratch/: gen_strings.py  test_debug.py  test_vocoder.py
src/: dependency_manager.py  enhancer_logic.py  export_onnx.py  export_onnx_submodules.py  main_gui.py
